--- a/package.json
+++ b/package.json
@@ -15,16 +15,20 @@
     "@types/axios": "^0.14.0",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
+    "@types/overlayscrollbars": "^1.12.1",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/react-redux": "^7.1.24",
     "@types/react-router-dom": "^5.3.3",
     "@types/redux": "^3.6.0",
     "@types/redux-thunk": "^2.1.0",
+    "@types/socket.io-client": "^1.4.36",
     "@types/uuid": "^8.3.4",
     "axios": "^0.27.2",
     "formik": "^2.2.9",
     "gh": "^2.8.9",
+    "overlayscrollbars": "1.13.3",
+    "overlayscrollbars-react": "^0.3.0",
     "pages": "^0.0.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -33,6 +37,7 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
+    "socket.io-client": "^2.3.0",
     "typescript": "^4.4.2",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.0"
