--- a/.env
+++ b/.env
@@ -1,4 +1,11 @@
-# Keys for API
-REACT_APP_BASE_URL = 'https://neko-back.herokuapp.com/2.0'
+
+REACT_APP_BASE_URL=https://neko-back.herokuapp.com/2.0
+
+REACT_APP_SOCKET_URL=https://neko-back.herokuapp.com
+
+
+
+
+
 
 
